[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Water/water.gd" type="Script" id=1]
[ext_resource path="res://Sfx/Water.ogg" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="water" type="Node2D" groups=[
"River",
]]
position = Vector2( 0, -0.663422 )
script = ExtResource( 1 )
size = Vector2( 2, 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 64, 32 )
scale = Vector2( 2, 1 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="WaterSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
bus = "Sfx"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
